# hx-exec

./: Cargo.toml  README.md  hx-exec.ci-test.toml  hx-exec.example.toml
.github/workflows/: ci.yml  release.yml
src/: config.rs  expand.rs  lib.rs  main.rs  platform.rs  presets.rs  runner.rs  util.rs
tests/: README.md  ci-integration-test.ps1  ci-integration-test.sh
